feat: introduce queue ✨  (#464)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "husky install",
     "start": "node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon app/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --trace-warnings app/server.js",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --profile",
     "build:grunt": "grunt",
     "lint": "eslint ./app --fix",
@@ -37,9 +37,12 @@
   },
   "homepage": "https://github.com/chrisleekr/binance-traiding-bot#readme",
   "dependencies": {
+    "@bull-board/api": "^4.2.2",
+    "@bull-board/express": "^4.2.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "binance-api-node": "^0.11.39",
+    "bull": "^4.8.5",
     "bunyan": "^1.8.15",
     "clean-webpack-plugin": "^4.0.0",
     "compression": "^1.7.4",
@@ -55,7 +58,7 @@
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
     "migrate": "^1.8.0",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "mongodb": "4.1.0",
     "pubsub-js": "^1.9.4",
@@ -72,6 +75,7 @@
     "@babel/preset-env": "^7.18.2",
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
+    "@types/bull": "^3.15.9",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.36",
@@ -103,7 +107,7 @@
     "grunt-contrib-cssmin": "^4.0.0",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.2",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.19",
     "prettier": "^2.6.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
