build: updated dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
+    open-pull-requests-limit: 0
     schedule:
       interval: 'weekly'
     allow:
