ci: make dev image to build for production image

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -58,11 +58,11 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
-          target: dev-stage
+          target: production-stage
           build-args: |
             PACKAGE_VERSION=${{ env.PACKAGE_VERSION }}
             GIT_HASH=${{ env.GIT_HASH }}
-            NODE_ENV=development
+            NODE_ENV=production
           tags: |
             chrisleekr/binance-trading-bot:development
 
