--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cron": "^2.0.0",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "husky": "^8.0.1",
     "ioredis": "^5.0.5",
     "jsonwebtoken": "^8.5.1",
@@ -59,13 +60,14 @@
     "lodash-webpack-plugin": "^0.11.6",
     "migrate": "^1.8.0",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "^0.5.37",
     "mongodb": "4.1.0",
     "pubsub-js": "^1.9.4",
     "qs": "^6.11.0",
     "rate-limiter-flexible": "^2.3.8",
     "redlock": "^4.2.0",
     "request-ip": "^3.3.0",
+    "shelljs": "^0.8.5",
     "uuid": "^8.3.2",
     "ws": "^8.8.1"
   },
