fix: improved queue processing (#562)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "MACD",
     "mrkdwn",
     "tradingview",
-    "tulind"
+    "tulind",
+    "uuidv"
   ],
   "eslint.format.enable": true,
   "eslint.codeActionsOnSave.mode": "all"
