--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - BINANCE_REDIS_HOST=binance-redis
       - BINANCE_REDIS_PORT=6379
       - BINANCE_REDIS_PASSWORD=secretp422
+      - TRADINGVIEW_HOST=tradingview
+      - TRADINGVIEW_PORT=8082
     ports:
       - 8080:80
     logging:
@@ -42,8 +44,9 @@ services:
       - PYTHONUNBUFFERED=1
       # https://docs.python.org/3/howto/logging.html#logging-levels
       - TRADINGVIEW_LOG_LEVEL=INFO
+      - TRADINGVIEW_PORT=8082
     ports:
-      - 8082:8080
+      - 8082:8082
     logging:
       driver: 'json-file'
       options:
